examples/test/testpolicy19210.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19210
  namespace: namespace34
spec:
  podSelector:
    matchLabels:
      key7: value49
      key45: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value7
          key7: value10
      podSelector:
        matchLabels:
          key36: value7
